--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Server Side Pagination using ag-grid.</h1>
 
 <ag-grid-angular [gridOptions]="gridOptions" style="width: 100%; height: 650px;" (gridReady)="onGridReady($event)"
-  class="ag-theme-balham" [rowData]="rowData" [columnDefs]="columnDefs">
+  class="ag-theme-balham"  [columnDefs]="columnDefs">
 </ag-grid-angular>
