--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Server Side Pagination using ag-grid.</h1>
+<h1> Open the network tab to see the api requests on page change</h1>
 
 <ag-grid-angular [gridOptions]="gridOptions" style="width: 100%; height: 650px;" (gridReady)="onGridReady($event)"
   class="ag-theme-balham"  [columnDefs]="columnDefs">
